add db schema, delete route and documentation
